src/test/resources/invalid_tests/WrongInputPosition.cnna
architecture WrongInputPosition{
    def input in
    def input in2
    def output out
    
    in ->
    fullyConnected(units=64)
    activation.relu()
    in2 ->
    fullyConnected(units=64)
    output{
        fullyConnected()
        activation.softmax()
    } -> out
    
}